--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
 		"blipp": "^4.0.2",
 		"dotenv": "^16.4.5",
 		"hapi-swagger": "^17.2.1",
+		"joi": "^17.12.2",
 		"jsonwebtoken": "^9.0.2",
 		"mongoose": "^8.2.3",
 		"sequelize": "^6.37.1"
